Code fromating and structuring, constants creation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@services/*": ["src/services/*"],
       "@store/*": ["src/store/*"],
       "@theme/*": ["src/theme/*"],
+      "@utils/*": ["src/utils/*"],
     }
   },
   "include": ["src/**/*"],
