--- a/package.json
+++ b/package.json
@@ -2,6 +2,22 @@
   "name": "shopping-frontend",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "moduleNameMapper": {
+      "^@components/(.*)$": "<rootDir>/src/components/$1",
+      "^@constants/(.*)$": "<rootDir>/src/constants/$1",
+      "^@hooks/(.*)$": "<rootDir>/src/hooks/$1",
+      "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
+      "^@layouts/(.*)$": "<rootDir>/src/layouts/$1",
+      "^@models/(.*)$": "<rootDir>/src/models/$1",
+      "^@pages/(.*)$": "<rootDir>/src/pages/$1",
+      "^@routes/(.*)$": "<rootDir>/src/routes/$1",
+      "^@services/(.*)$": "<rootDir>/src/services/$1",
+      "^@store/(.*)$": "<rootDir>/src/store/$1",
+      "^@theme/(.*)$": "<rootDir>/src/theme/$1",
+      "^@utils/(.*)$": "<rootDir>/src/utils/$1"
+    }
+  },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -17,6 +33,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-mock-store": "^1.0.6",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "react": "^18.3.1",
@@ -26,6 +43,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -55,6 +73,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
+    "babel-jest": "^29.7.0",
     "react-app-rewired": "^2.2.1"
   }
 }
