--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "lint": "eslint \"src/**/*.{ts,tsx}\"",
+     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -76,7 +78,12 @@
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@eslint/js": "^9.12.0",
     "babel-jest": "^29.7.0",
-    "react-app-rewired": "^2.2.1"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
+    "react-app-rewired": "^2.2.1",
+    "typescript-eslint": "^8.9.0"
   }
 }
