--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
+
+# next.js
+/.next/
+/out/
 
 # production
 /build
@@ -19,6 +24,19 @@
 .env.production.local
 .env
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+.env
