--- a/package.json
+++ b/package.json
@@ -2,22 +2,6 @@
   "name": "shopping-frontend",
   "version": "0.1.0",
   "private": true,
-  "jest": {
-    "moduleNameMapper": {
-      "^@components/(.*)$": "<rootDir>/src/components/$1",
-      "^@constants/(.*)$": "<rootDir>/src/constants/$1",
-      "^@hooks/(.*)$": "<rootDir>/src/hooks/$1",
-      "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
-      "^@layouts/(.*)$": "<rootDir>/src/layouts/$1",
-      "^@models/(.*)$": "<rootDir>/src/models/$1",
-      "^@pages/(.*)$": "<rootDir>/src/pages/$1",
-      "^@routes/(.*)$": "<rootDir>/src/routes/$1",
-      "^@services/(.*)$": "<rootDir>/src/services/$1",
-      "^@store/(.*)$": "<rootDir>/src/store/$1",
-      "^@theme/(.*)$": "<rootDir>/src/theme/$1",
-      "^@utils/(.*)$": "<rootDir>/src/utils/$1"
-    }
-  },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -33,9 +17,10 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@types/redux-mock-store": "^1.0.6",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
+    "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -43,18 +28,15 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
-    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-     "lint": "eslint \"src/**/*.{ts,tsx}\"",
-     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": [
@@ -73,17 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.25.8",
-    "@babel/preset-react": "^7.25.7",
-    "@babel/preset-typescript": "^7.25.7",
-    "@eslint/js": "^9.12.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.37.1",
-    "globals": "^15.11.0",
-    "react-app-rewired": "^2.2.1",
-    "typescript-eslint": "^8.9.0"
   }
 }
